fixed horizontal scroll bar

--- a/src/scss/hero/Hero.scss
+++ b/src/scss/hero/Hero.scss
@@ -3,7 +3,7 @@
 .hero {
     background-color: #2d2f33;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 
     display: flex;
     align-items: stretch;
