--- a/src/scss/projects/Projects.scss
+++ b/src/scss/projects/Projects.scss
@@ -1,15 +1,14 @@
 @import './variables';
 @import './bert_project';
 @import './nmt_project';
+@import './mlgui_project';
 
 .projects {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
 
     display: flex;
     align-items: center;
-
-    // overflow: hidden;
 
     .sidebar {
         width: $sidebar-ratio;
@@ -96,6 +95,7 @@
             padding: 0rem 1rem;
             overflow: hidden;
             // overflow: visible;
+            // overflow: scroll;
 
             .project-wrapper {
                 // Animate this element
